# chewie

./: .travis.yml  LICENSE  README.md  Test.hs  chewie.cabal
Audio/: Chewie.hs
Audio/Chewie/: Evaluator.hs  Tests.hs  Time.hs
Sound/: Chewie.hs
Sound/Chewie/: Evaluator.hs  FromSignal.hs  Tests.hs  Time.hs
