name:                chewie
version:             0.1.0
synopsis:            Audio and effects processing system
-- description:         
homepage:            https://github.com/prophile/chewie
bug-reports:         httss://github.com/prophile/chewie/issues
license:             MIT
license-file:        LICENSE
author:              Alistair Lynn
maintainer:          arplynn@gmail.com
copyright:           Alistair Lynn, 2014
category:            Audio
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Audio.Chewie
  build-depends:       base >=4.6 && <4.8
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >=4.6 && <4.8,
                       Cabal >=1.10 && <2
  default-language:    Haskell2010

